# support-shift-scheduler

./: .env.dist  .eslintrc.json  .gitignore  .lintstagedrc  CHANGELOG.md  README.md  get-victorops-schedule.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: flowzone.yml  run_algorithm.yml
.versionbot/: CHANGELOG.yml
algo-core/: __main__.py  onboarding.py  ortools_solver.py  scheduler_utils.py
algo-core/src/: __init__.py  custom_var_domains.py  onboarding.py  ortools_solver.py  process_input.py  read_input.py  solve_model.py  veterans.py  write_output.py
helper-scripts/: beautify-schedule.js  beautify-schedule.ts  check-for-onboarding.ts  download-and-configure-input.js  download-and-configure-input.ts  send-calendar-invites.js  send-calendar-invites.ts  set-devops-weekend-schedule.ts  set-victorops-schedule.ts
helper-scripts/options/: balena.json  balenaio.json  devOps.json  productOS.json  summit.json  supportAuditing.json
lib/: gauth.js  gauth.ts  gsheets.js  gsheets.ts  validate-json.js  validate-json.ts
lib/schemas/: support-shift-scheduler-input.schema.json  support-shift-scheduler-output.schema.json
logs-example/: beautified-schedule.txt  flowdock-message.txt  support-shift-scheduler-input.json  support-shift-scheduler-output.json
logs/2021-04-26_devOps/: beautified-schedule.txt  flowdock-message.txt  support-shift-scheduler-input.json  support-shift-scheduler-output.json
logs/example/: beautified-schedule.txt  mentors.txt  (+11 more)
tests/: test_placeholder.py
(+4 files in other folders)
