[tool.poetry]
name = "support-shift-scheduler"
version = "1.0.6"
description = ""
authors = ["AlidaOdendaal <alida@balena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = ">=3.8.1,<3.11"
pandas = "^1.5.2"
ortools = "^9.4.1874"
colorama = "^0.4.6"
jsonschema = "^4.17.1"
flake8 = "7.0.0"
pydocstyle = "^6.1.1"
pytest = "^7.2.0"
black = "^23.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
