[tool.poetry]
name = "support-shift-scheduler"
version = "1.0.6"
description = ""
authors = ["AlidaOdendaal <alida@balena.io>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
ortools = "^9.12.4544"
colorama = "^0.4.6"
jsonschema = "^4.23.0"
flake8 = "^7.2.0"
pydocstyle = "^6.3.0"
pytest = "^8.3.5"
black = "^25.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
